--- a/styles/_font.scss
+++ b/styles/_font.scss
@@ -1,4 +1,4 @@
 @font-face {
     font-family: "Bodoni";
-    src: url('fonts/BOD_BI.TTF.ttf')format('truetype');
+    src: url('../fonts/BOD_BI.ttf')format('truetype');
 }
