modules typescript added, font fixed

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,7 +20,7 @@ body {
         padding: 30px;
 
         .table-header {
-            font-family: Bodoni;
+            font-family: "Bodoni";
             font-weight: bold;
             font-style: italic;
             display: flex;
